# timehash

./: CONTRIBUTING.md  LICENSE  README.md
audit/: methodology_audit.md
benchmarks/: README.md  benchmark.py  benchmark_es.py  benchmark_es_fair.py  benchmark_yelp.py  results.md
cpp/: README.md  test_timehash.cpp  timehash.hpp
cpp/examples/: basic_usage  basic_usage.cpp
go/: README.md  go.mod  timehash.go  timehash_test.go
go/examples/: basic_usage.go
java/: README.md  pom.xml
java/src/main/java/com/naver/timehash/: Timehash.java
java/src/main/java/com/naver/timehash/example/: BasicUsage.java
java/src/test/java/com/naver/timehash/: TimehashTest.java
javascript/: README.md  package.json  timehash.js  timehash.test.js
javascript/examples/: basic_usage.js
kotlin/: README.md  build.gradle.kts
kotlin/src/main/kotlin/com/naver/timehash/: Timehash.kt
kotlin/src/main/kotlin/com/naver/timehash/example/: BasicUsage.kt
kotlin/src/test/kotlin/com/naver/timehash/: TimehashTest.kt
python/: README.md  setup.py  timehash.py
python/examples/: basic_usage.py
python/tests/: test_timehash.py
rust/: Cargo.toml  README.md
rust/examples/: basic_usage.rs
rust/src/: lib.rs
scala/: README.md  build.sbt
scala/src/main/scala/com/naver/timehash/: Timehash.scala
scala/src/main/scala/com/naver/timehash/example/: BasicUsage.scala
scala/src/test/scala/com/naver/timehash/: TimehashTest.scala
